Changelog for s6-portable-utils.

In 2.2.1.3
----------

 - s6-ln doesn't use potentially blocking random anymore, so it's
usable in early boot. This needs skalibs-2.8.0.0, however.


In 2.2.1.2
----------

 - Adaptation to skalibs-2.7.0.0.


In 2.2.1.1
----------

 - Bugfix release.
 - Adaptation to skalibs-2.6.0.0.


In 2.2.1.0
----------

 - s6-ln now accepts the non-standard -n option, with a meaning
similar to the one in GNU ln. This is used to atomically update
symbolic links to directories.


In 2.2.0.0
----------

 - Added this NEWS file. :)
 - Major types overhaul to make them more POSIXly correct:
compatibility with skalibs-2.5.0.0.
