@@ -5,3 +5,46 @@
 *.so.*
 /config.mak
 /src/include/s6-portable-utils/config.h
+/s6-basename
+/s6-cat
+/s6-chmod
+/s6-chown
+/s6-clock
+/s6-cut
+/s6-dirname
+/s6-dumpenv
+/s6-echo
+/s6-env
+/s6-expr
+/s6-false
+/s6-format-filter
+/s6-grep
+/s6-head
+/s6-hiercopy
+/s6-linkname
+/s6-ln
+/s6-ls
+/s6-maximumtime
+/s6-mkdir
+/s6-mkfifo
+/s6-nice
+/s6-nuke
+/s6-pause
+/s6-printenv
+/s6-quote
+/s6-quote-filter
+/s6-rename
+/s6-rmrf
+/s6-seq
+/s6-sleep
+/s6-sort
+/s6-sync
+/s6-tail
+/s6-test
+/s6-touch
+/s6-true
+/s6-uniquename
+/s6-unquote
+/s6-unquote-filter
+/s6-update-symlinks
+/seekablepipe
