@@ -21,7 +21,11 @@
 <h2> in 2.2.1.3 </h2>
 
 <ul>
- <li> skalibs dependency bumped to 2.8.0.0. </li>
+ <li> <a href="//skarnet.org/software/skalibs/"></a>skalibs</a>
+dependency bumped to 2.8.0.0. </li>
+ <li> Everything now builds as PIC by default no matter
+the toolchain's settings. Use the <tt>--disable-all-pic</tt> configure
+option to build executables and static libraries as non-PIC. </li>
 </ul>
 
 <h2> in 2.2.1.2 </h2>
